--- a/pause-urbaine-website/hugo.yaml
+++ b/pause-urbaine-website/hugo.yaml
@@ -15,6 +15,20 @@ languages:
     title: Pause Urbaine
     params:
       description: "Salon de coiffure à Genève - Deux emplacements: Plainpalais et Eaux-Vives"
+    menu:
+      main:
+        - identifier: services
+          name: Services
+          url: /fr/services/
+          weight: 2
+        - identifier: pricing
+          name: Tarifs
+          url: /fr/tarifs/
+          weight: 3
+        - identifier: contact
+          name: Contact
+          url: /fr/contact/
+          weight: 4
   
   en:
     languageCode: en-US
@@ -23,6 +37,20 @@ languages:
     title: Pause Urbaine
     params:
       description: "Hair salon in Geneva - Two locations: Plainpalais and Eaux-Vives"
+    menu:
+      main:
+        - identifier: services
+          name: Services
+          url: /en/services/
+          weight: 2
+        - identifier: pricing
+          name: Pricing
+          url: /en/pricing/
+          weight: 3
+        - identifier: contact
+          name: Contact
+          url: /en/contact/
+          weight: 4
 
 # Build configuration
 build:
