--- a/pause-urbaine-website/hugo.yaml
+++ b/pause-urbaine-website/hugo.yaml
@@ -19,15 +19,15 @@ languages:
       main:
         - identifier: services
           name: Services
-          url: /fr/services/
+          url: /services/
           weight: 2
         - identifier: pricing
           name: Tarifs
-          url: /fr/tarifs/
+          url: /tarifs/
           weight: 3
         - identifier: contact
           name: Contact
-          url: /fr/contact/
+          url: /contact/
           weight: 4
   
   en:
@@ -41,15 +41,15 @@ languages:
       main:
         - identifier: services
           name: Services
-          url: /en/services/
+          url: /services/
           weight: 2
         - identifier: pricing
           name: Pricing
-          url: /en/pricing/
+          url: /pricing/
           weight: 3
         - identifier: contact
           name: Contact
-          url: /en/contact/
+          url: /contact/
           weight: 4
 
 # Build configuration
