--- a/pause-urbaine-website/hugo.yaml
+++ b/pause-urbaine-website/hugo.yaml
@@ -19,15 +19,15 @@ languages:
       main:
         - identifier: services
           name: Services
-          url: /services/
+          pageRef: /services
           weight: 2
         - identifier: pricing
           name: Tarifs
-          url: /tarifs/
+          pageRef: /tarifs
           weight: 3
         - identifier: contact
           name: Contact
-          url: /contact/
+          pageRef: /contact
           weight: 4
   
   en:
@@ -41,15 +41,15 @@ languages:
       main:
         - identifier: services
           name: Services
-          url: /services/
+          pageRef: /services
           weight: 2
         - identifier: pricing
           name: Pricing
-          url: /pricing/
+          pageRef: /pricing
           weight: 3
         - identifier: contact
           name: Contact
-          url: /contact/
+          pageRef: /contact
           weight: 4
 
 # Build configuration
