fix(i18n): ensure all pages exist in both languages
- Rename pricing.en.md to tarifs.en.md for proper translation linking
- Update English menu to point to /tarifs instead of /pricing
- All pages now properly linked as translations (services, tarifs, contact)

--- a/pause-urbaine-website/hugo.yaml
+++ b/pause-urbaine-website/hugo.yaml
@@ -45,7 +45,7 @@ languages:
           weight: 2
         - identifier: pricing
           name: Pricing
-          pageRef: /pricing
+          pageRef: /tarifs
           weight: 3
         - identifier: contact
           name: Contact
