chore(videos): exclude video files from Git and GitHub Pages
- Add video file patterns to .gitignore (*.mp4, *.webm, *.mov, etc.)
- Remove existing video files from Git index (InShot_20230124_174510282_1.mp4, Teste1.mp4)
- Update GitHub Actions workflow to strip videos from GitHub Pages deployment
- Create VIDEO_HANDLING.md documentation explaining video strategy
- Create static/videos/README.md with video management instructions
- Videos will be stored in S3 for production, excluded from GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,12 @@ jobs:
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
 
+      - name: Remove video files from GitHub Pages build
+        run: |
+          echo "Removing video files from public directory for GitHub Pages..."
+          find pause-urbaine-website/public -type f \( -name "*.mp4" -o -name "*.webm" -o -name "*.mov" -o -name "*.avi" -o -name "*.mkv" -o -name "*.flv" -o -name "*.wmv" \) -delete
+          echo "Video files removed. Videos will be served from S3 in production."
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
