--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /.importedWordpress
 /.vscode
 /.kiro/settings/mcp.json
+
+# Video files (stored in S3, not in Git)
+*.mp4
+*.webm
+*.mov
+*.avi
+*.mkv
+*.flv
+*.wmv
