--- a/pause-urbaine-website/data/locations.yaml
+++ b/pause-urbaine-website/data/locations.yaml
@@ -1,40 +1,40 @@
 locations:
   - id: plainpalais
     name:
-      fr: Plainpalais
-      en: Plainpalais
+      fr: "Pause Urbaine Plainpalais"
+      en: "Pause Urbaine Plainpalais"
     address:
-      street: Rue de Carouge 42
-      city: Genève
-      postal: 1205
-      country: Suisse
-    phone: "+41 22 XXX XX XX"
-    instagram: "@pauseurbaine_plainpalais"
+      street: "Quai des Moulins 12A"
+      city: "Genève"
+      postal: "1204"
+      country: "Suisse"
+    phone: "022 310 4081"
+    instagram: "https://www.instagram.com/pauseurbaine/"
     hours:
       monday: "Fermé"
-      tuesday: "9h00 - 19h00"
-      wednesday: "9h00 - 19h00"
-      thursday: "9h00 - 19h00"
-      friday: "9h00 - 19h00"
-      saturday: "9h00 - 18h00"
+      tuesday: "10h - 18h"
+      wednesday: "10h - 18h"
+      thursday: "10h - 18h"
+      friday: "10h - 18h"
+      saturday: "10h - 17h"
       sunday: "Fermé"
     
   - id: eauxvives
     name:
-      fr: Eaux-Vives
-      en: Eaux-Vives
+      fr: "Pause Urbaine Eaux-Vives"
+      en: "Pause Urbaine Eaux-Vives"
     address:
-      street: Rue du Lac 15
-      city: Genève
-      postal: 1207
-      country: Suisse
-    phone: "+41 22 YYY YY YY"
-    instagram: "@pauseurbaine_eauxvives"
+      street: "Rue de Montchoisy 40"
+      city: "Genève"
+      postal: "1207"
+      country: "Suisse"
+    phone: "022 736 2030"
+    instagram: "https://www.instagram.com/pauseurbaine/"
     hours:
       monday: "Fermé"
-      tuesday: "9h00 - 19h00"
-      wednesday: "9h00 - 19h00"
-      thursday: "9h00 - 19h00"
-      friday: "9h00 - 19h00"
-      saturday: "9h00 - 18h00"
+      tuesday: "10h - 18h"
+      wednesday: "10h - 18h"
+      thursday: "10h - 18h"
+      friday: "10h - 18h"
+      saturday: "10h - 17h"
       sunday: "Fermé"
