ci(deploy): fix GitHub Actions workflow and dependencies
- Update Hugo version from 0.156.0 to 0.139.3 (correct version)
- Update Node.js version from 24 to 20 (stable LTS)
- Update pnpm action from v3 to v4
- Update pnpm version from 8 to 9
- Add pnpm cache configuration with cache-dependency-path
- Add --frozen-lockfile flag to pnpm install for reproducible builds
- Add packageManager field to package.json for pnpm version pinning

--- a/pause-urbaine-website/package.json
+++ b/pause-urbaine-website/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Static website for Pause Urbaine hair salon",
   "private": true,
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
     "dev": "hugo server --buildDrafts --disableFastRender",
     "build": "hugo --minify",
