--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.156.0
+      HUGO_VERSION: 0.139.3
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,15 +39,17 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '24'
+          node-version: '20'
+          cache: 'pnpm'
+          cache-dependency-path: pause-urbaine-website/pnpm-lock.yaml
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v3
+        uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 9
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
         working-directory: ./pause-urbaine-website
 
       - name: Setup Pages
