fix(data): strip instagram links

--- a/pause-urbaine-website/data/locations.yaml
+++ b/pause-urbaine-website/data/locations.yaml
@@ -9,7 +9,7 @@ locations:
       postal: "1204"
       country: "Suisse"
     phone: "022 310 4081"
-    instagram: "https://www.instagram.com/pauseurbaine/"
+    instagram: "pauseurbaine"
     hours:
       monday: "Fermé"
       tuesday: "10h - 18h"
@@ -29,7 +29,7 @@ locations:
       postal: "1207"
       country: "Suisse"
     phone: "022 736 2030"
-    instagram: "https://www.instagram.com/pauseurbaine/"
+    instagram: "pauseurbaine_eauxvives"
     hours:
       monday: "Fermé"
       tuesday: "10h - 18h"
