feat(locations): add Google Maps links to addresses and location pins
- Add maps_url field to both locations in locations.yaml
- Make location card addresses clickable with Google Maps links
- Make header location pins clickable with Google Maps links
- Add i18n translations for "view_on_maps"
- Add hover styles for clickable location elements

--- a/pause-urbaine-website/data/locations.yaml
+++ b/pause-urbaine-website/data/locations.yaml
@@ -10,6 +10,7 @@ locations:
       country: "Suisse"
     phone: "022 310 4081"
     instagram: "pauseurbaine"
+    maps_url: "https://www.google.com/maps/search/?api=1&query=Quai+des+Moulins+12A,+1204+Genève"
     hours:
       monday: "Fermé"
       tuesday: "10h - 18h"
@@ -30,6 +31,7 @@ locations:
       country: "Suisse"
     phone: "022 736 2030"
     instagram: "pauseurbaine_eauxvives"
+    maps_url: "https://www.google.com/maps/search/?api=1&query=Rue+de+Montchoisy+40,+1207+Genève"
     hours:
       monday: "Fermé"
       tuesday: "10h - 18h"
