fix(locations): rename Plainpalais to Bel-Air
- Update location ID from plainpalais to belair
- Change display name to "Pause Urbaine Bel-Air"
- Apply changes to both Hugo and WordPress theme

--- a/pause-urbaine-website/data/locations.yaml
+++ b/pause-urbaine-website/data/locations.yaml
@@ -1,8 +1,8 @@
 locations:
-  - id: plainpalais
+  - id: belair
     name:
-      fr: "Pause Urbaine Plainpalais"
-      en: "Pause Urbaine Plainpalais"
+      fr: "Pause Urbaine Bel-Air"
+      en: "Pause Urbaine Bel-Air"
     address:
       street: "Quai des Moulins 12A"
       city: "Genève"
