ci(deploy): add path filters to Hugo deployment workflow
- Only trigger on changes to pause-urbaine-website directory
- Include workflow and setup script changes
- Prevent unnecessary builds for WordPress theme changes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'pause-urbaine-website/**'
+      - '.github/workflows/deploy.yml'
+      - '.github/scripts/setup-environments.sh'
   workflow_dispatch:
     inputs:
       environment:
