ci(wordpress): inject git SHA into style.css version during build
- Update style.css Version field with git SHA before creating archive
- Format: 1.0.0-{short-sha} (e.g., 1.0.0-310823e)
- Ensures WordPress admin shows exact commit version

--- a/.github/workflows/build-wordpress-theme.yml
+++ b/.github/workflows/build-wordpress-theme.yml
@@ -27,8 +27,17 @@ jobs:
         id: git-sha
         run: |
           SHORT_SHA=$(git rev-parse --short HEAD)
+          FULL_SHA=$(git rev-parse HEAD)
           echo "short_sha=${SHORT_SHA}" >> $GITHUB_OUTPUT
+          echo "full_sha=${FULL_SHA}" >> $GITHUB_OUTPUT
           echo "Git SHA: ${SHORT_SHA}"
+
+      - name: Update version in style.css
+        run: |
+          cd pause-urbaine-wp-theme
+          sed -i "s/Version: .*/Version: 1.0.0-${{ steps.git-sha.outputs.short_sha }}/" style.css
+          echo "Updated style.css version to: 1.0.0-${{ steps.git-sha.outputs.short_sha }}"
+          cd ..
 
       - name: Create theme archive
         run: |
